--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <img src="img/logo.png" alt="logo">
+            <ul>
+                <li>Portfolio</li>
+                <li>Blogs</li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
+        <!-- header banner -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">Hi, I am</h3>
+                <h1 class="banner-title">Joy Sky</h1>
+                <p class="banner-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam sit recusandae, deleniti sed repudiandae ex saepe ab repellendus nesciunt quod in! Adipisci voluptates et beatae magni modi accusantium ab molestiae magnam optio, laborum cum iste quidem consectetur inventore atque soluta. Eveniet repellendus nam ex soluta modi earum deserunt, quod ut!</p>
+                <button class="btn-primary">Download CV</button>
+            </div>
+            <img src="img/joy.png" alt="Joy">
+        </div>
     </header>
     <main>
 
