about section complate

--- a/index.html
+++ b/index.html
@@ -33,7 +33,30 @@
         </div>
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-desc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio distinctio perferendis exercitationem tempora nobis placeat quod, vitae fugiat eius veniam praesentium porro dignissimos accusantium. Aliquid illum quia porro ipsum voluptate consequuntur repellendus mollitia accusamus, officiis, distinctio placeat reprehenderit tempora aut odio delectus aperiam voluptatem minima magni at rerum dicta alias!
+            </p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-desc">Joy Sky</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">E-mail:</p>
+                    <p class="info-desc">example@email.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Speciality:</p>
+                    <p class="info-desc">Web Development</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Location:</p>
+                    <p class="info-desc">Dhaka, Bangladesh</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
