resume section added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,99 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="icon/js.png" alt="JavaScript">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, labore. Quam itaque similique officia temporibus suscipit fugit tempora commodi quis?</p>
+                </div>
+                <div class="skill">
+                    <img src="icon/react.png" alt="React">
+                    <p class="skill-title">React</p>
+                    <p class="skill-desc">Accusantium vero qui odit iure, explicabo, officia minus modi repellendus dolores natus non fugiat aut, ullam voluptas laboriosam ut? Consequatur.</p>
+                </div>
+                <div class="skill">
+                    <img src="icon/nodejs.png" alt="NodeJS">
+                    <p class="skill-title">NodeJS</p>
+                    <p class="skill-desc">Exercitationem quia, sint, pariatur unde nostrum impedit sequi voluptatum vel nesciunt vero enim ex consectetur accusamus itaque laborum, nemo voluptates!</p>
+                </div>
+                <div class="skill">
+                    <img src="icon/mongo.png" alt="Mongo">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-desc">Repellendus cum fugiat excepturi deserunt optio ducimus ipsam delectus beatae, voluptate harum ipsum facilis quod ipsa suscipit rem adipisci fuga.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume Section -->
+        <Section class="resume">
+            <h3 class="section-title">A summary of my Resume</h3>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="desc">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="desc">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="desc">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="desc">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="desc">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="desc">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </Section>
     </main>
     <footer>
 
