--- a/index.html
+++ b/index.html
@@ -150,6 +150,34 @@
                 <button class="btn-primary">Download CV</button>
             </div>
         </Section>
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Let's Connect</h3>
+                <p class="section-desc">
+                    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through
+                    Friday.
+                </p>
+                <a href="">
+                    <img src="icon/facebook.png" alt="Facebook">
+                </a>
+                <a href="">
+                    <img src="icon/insta.png" alt="Instagram">
+                </a>
+                <a href="">
+                    <img src="icon/twitter.png" alt="Twitter">
+                </a>
+            </div>
+            <div>
+                <h3 class="section-title">Let's Message Me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your E-mail">
+                    <textarea name="" id="" cols="20" rows="10" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
 
